      (BR 194259)
    * Deleting files from the File Browser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations can now be canceled. 
    * Port Copy/Move to Collection actions to the new File Browser.
    * Script-Updater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES:
    * Fixed time labels getting truncated in the slim toolbar. (BR 195935)
    * Fixed broken keyboard navigation in the playlist after activating a track. 
      (BR 225791) 
    * Workaround broken Jamendo url redirects. (BR 221922)
    * MainToolbar labels: watch changes of metadata & queue (BR 227439 & BR 227362)
    * MainToolbar labels: avoid empty strings (BR 228042)
    * MainToolbar timelabel: show progressing time for stream (BR 227598)
    * Playlist layout editor: Disable "rename" button for default playlist layouts. 
      Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Playlist layout editor: When reating a copy of a default layout, add copy
      to layout list imediately. Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Compilations do not become normal albums when renaming them. (BR 192029)
    * Fixed a bug where there would be no dynamic playlist biases available 
      with a clean startup. (BR 227797)
    * Fixed a crash when pressing dynamic playlist "save" button on first startup. (BR 227073)
    * Fixed a bug when trying to drag files from some app into Amarok.
      (BR 226167)
    * Fixed a bug in podcast parsing that broke all feeds that do not include a
      guid and possible overwrited data from other podcasts. Introduced in 2.3 beta.
      (BR 227515)
    * Correctly show progress description of last remaining job in the statusbar 
      after multiple jobs have been running.
    * Fixed a regression that broke the playlist save button.
    * Respect the podcast episode limit when new episodes are added during update.
      (BR 220768)