@@ -31,6 +31,16 @@ public:
     virtual bool reallyMove(CollectionLocation* loc, const Meta::TrackList& tracks) const;
     virtual void errorDeleting( CollectionLocation* loc, const Meta::TrackList& tracks ) const;
     virtual void notWriteable(CollectionLocation* loc) const;
+
+ private:
+    /**
+     * Builds a string of the format "ARTIST - TITLE",
+     * for media device tracks.
+     * @param track Pointer of the Meta::Track item
+     * @return String with artist and title
+     */
+    virtual QString realTrackName( const Meta::TrackPtr track ) const;
 };
+
 
 #endif
